tests/NormalTests/paczka1/small_fuzzy/27437299.err
Error in line 1: A85 A85 39,7
Error in line 9: Iny S426 88,72
Error in line 11: Wpay A643 13,90
